@@ -2,3 +2,4 @@
 - fuxmovies - fix playback
 - cam4 - fix favorites (existing CAM4 favorites must be removed and re-added)
 - fullporner - fix listing
+- chaturbate - authentication by adding a sessionid cookie in the settings (Settings - Advanced - Chaturbate Authentication Cookie)
